# pliegors

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FRAMEWORK.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package-lock.json  package.json  product.capabilities.json  rust-toolchain.toml
benchmarks/browser-apply/: Cargo.toml
benchmarks/browser-apply/src/: lib.rs
crates/pliego-adapters/: Cargo.toml
crates/pliego-adapters/src/: lib.rs  runtime-v1.js
crates/pliego-adapters/tests/: runtime-v1.test.mjs
crates/pliego-artifact/: Cargo.toml
crates/pliego-artifact/src/: lib.rs
crates/pliego-assets/: Cargo.toml
crates/pliego-assets/src/: adaptive.rs  lib.rs  main.rs
crates/pliego-cli/: Cargo.toml  build.rs
crates/pliego-cli/src/: development.rs  lib.rs  main.rs  pboc.rs  project_manifest.rs  r1_material_tests.rs  runtime_diagnostics.rs  sdk.rs  telemetry.rs  trust.rs
crates/pliego-cli/tests/: cli_contract.rs  dev_hmr.rs
crates/pliego-cloudflare/: Cargo.toml  README.md
crates/pliego-cloudflare/src/: lib.rs
crates/pliego-content/: Cargo.toml
crates/pliego-content/src/: diagnostic.rs  lib.rs  markdown.rs  snapshot.rs
crates/pliego-content/tests/: collections.rs
crates/pliego-data/: Cargo.toml  README.md
crates/pliego-data/src/: action.rs  authority.rs  cache.rs  cancellation.rs  context.rs  csrf.rs  error.rs  idempotency.rs  lib.rs  loader.rs  outbound.rs  receipt.rs  resource.rs  secret.rs  session.rs  values.rs
crates/pliego-data/tests/: cache.rs  idempotency.rs  outbound_http.rs  request_data.rs  security.rs  session.rs
crates/pliego-dom/: Cargo.toml
crates/pliego-dom/src/: keyed.rs  lib.rs  mount.rs  name.rs
crates/pliego-dom/src/mount/: adopt.rs
crates/pliego-dom/tests/: browser_lifecycle.rs  webdriver.json
crates/pliego-fold/: Cargo.toml
crates/pliego-fold/src/: codec.rs  lib.rs  projection.rs  snapshot.rs
crates/pliego-fold/tests/: r3_projection.rs
crates/pliego-hyphae/: Cargo.toml
crates/pliego-hyphae/src/: lib.rs  r2_tests.rs
crates/pliego-inspect/: Cargo.toml
crates/pliego-inspect/src/: lib.rs  main.rs
crates/pliego-log/: Cargo.toml
crates/pliego-log/src/: lib.rs
crates/pliego-macros/: Cargo.toml
crates/pliego-macros/src/: lib.rs
crates/pliego-pboc/: Cargo.toml  README.md
crates/pliego-pboc/src/: artifact.rs  compatibility.rs  lib.rs  model.rs  router.rs  util.rs  validate.rs
crates/pliego-pboc/tests/: contract.rs
crates/pliego-reactive/: Cargo.toml
crates/pliego-reactive/src/: lib.rs
crates/pliego-reactive/tests/: wasm_unwind.rs
crates/pliego-resume/: Cargo.toml
crates/pliego-resume/src/: lib.rs
crates/pliego-router/: Cargo.toml  README.md
crates/pliego-router/src/: lib.rs
crates/pliego-runtime/: Cargo.toml  README.md
crates/pliego-runtime/src/: action.rs  error.rs  host.rs  lib.rs  limits.rs  middleware.rs  pboc.rs  render.rs  scope.rs  session.rs  telemetry.rs  transport.rs  upload.rs
crates/pliego-runtime/tests/: actions_g2.rs  native_load.rs  native_runtime.rs  native_socket.rs  opentelemetry.rs  session.rs
crates/pliego-sdk/: Cargo.toml  README.md
crates/pliego-sdk/src/: capability.rs  compatibility.rs  component.rs  lib.rs  manifest.rs  runtime.rs  tooling.rs  wit.rs
crates/pliego-sdk/wit/component/: component.wit
crates/pliego-sdk/wit/deploy/: deploy.wit
crates/pliego-sdk/wit/diagnostics/: diagnostics.wit
crates/pliego-sdk/wit/effects/: effects.wit
crates/pliego-sdk/wit/http/: http.wit
crates/pliego-sdk/wit/manifest/: manifest.wit
crates/pliego-ssg/: Cargo.toml
crates/pliego-ssg/src/: lib.rs  product.rs
crates/pliego-starters/: Cargo.toml
crates/pliego-starters/src/: lib.rs
crates/pliego-starters/templates/cinematic/: Cargo.toml.tmpl  README.md  THIRD_PARTY_NOTICES.md  pliego.toml.tmpl
crates/pliego-starters/templates/default/: Cargo.toml.tmpl  README.md  gitignore.tmpl
crates/pliego-starters/templates/editorial/: README.md  pliego.toml.tmpl
crates/pliego-starters/templates/minimal/: Cargo.toml.tmpl  README.md
examples/content-collections-pliegors/: Cargo.toml  README.md  pliego.toml
examples/content-collections-pliegors/assets/: site.css
examples/content-collections-pliegors/src/: components.rs  content.rs  main.rs  markdown_view.rs  routes.rs
examples/fullstack-pliego/: Cargo.toml  README.md
examples/fullstack-pliego/src/: lib.rs  main.rs
examples/fullstack-pliego/tests/: two_replicas.rs
examples/minimal-pliego/: Cargo.toml  pliego.toml
examples/minimal-pliego/src/: main.rs
examples/native-pliego/: Cargo.toml  README.md
examples/native-pliego/src/: lib.rs  main.rs
examples/pliegors-site/: Cargo.toml  pliego.toml
examples/pliegors-site-client/: Cargo.toml
examples/pliegors-site-client/src/: lib.rs
examples/pliegors-site/content/copy/: shell.json
examples/pliegors-site/content/routes/: site.toml
examples/pliegors-site/content/seo-pages/: about.toml  accessibility.toml  changelog.toml  docs-artifact-trust.toml  docs-assets.toml  docs-browser-framework-conformance.toml  docs-browser-runtime.toml  docs-build-and-deploy.toml  docs-cli.toml  docs-content.toml  docs-crate-reference.toml  docs-developer-loop.toml  docs-dom-lifecycle.toml  docs-errors-and-diagnostics.toml  docs-events-and-folds.toml  docs-fullstack-beta.toml  docs-getting-started.toml  docs-hyphae-sync.toml  docs-licensing.toml  docs-native-runtime.toml  (+20 more)
examples/pliegors-site/public/: _headers  robots.txt  site.webmanifest
examples/pliegors-site/src/: content.rs  docs.rs  main.rs  native.css  pages.rs  routes.rs  seo.rs  sitemap.rs
fuzz/: Cargo.toml
fuzz/corpus/adapter_manifest/: valid-shape.txt
fuzz/corpus/dom_adoption/: parser-sensitive.txt
fuzz/corpus/event_schema/: duplicate.json  valid.json
fuzz/corpus/portable_path/: traversal.txt
fuzz/corpus/project_manifest/: overlap.toml  valid.toml
fuzz/corpus/snapshot/: raw.txt
fuzz/fuzz_targets/: adapter_manifest.rs  dom_adoption.rs  event_schema.rs  portable_path.rs  project_manifest.rs  snapshot.rs
(+293 files in other folders)
