# SPDX-License-Identifier: Apache-2.0
# PliegoRS workspace. Crates land as the roadmap advances (docs/00 §4/§6).

[workspace]
resolver = "2"
members = [
    "crates/pliego-log",
    "crates/pliego-reactive",
    "crates/pliego-fold",
    "crates/pliego-dom",
    "crates/pliego-hyphae",
    "crates/pliego-inspect",
    "crates/pliego-artifact",
    "crates/pliego-assets",
    "crates/pliego-content",
    "crates/pliego-ssg",
    "crates/pliego-macros",
    "crates/pliego-resume",
    "crates/pliego-adapters",
    "crates/pliego-sdk",
    "crates/pliego-starters",
    "crates/pliego-cli",
    "examples/spike",
    "examples/minimal-pliego",
    "examples/content-collections-pliegors",
    "examples/pliegors-site",
    "examples/pliegors-site-client",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
rust-version = "1.86"
authors = ["Celiums Solutions LLC <hello@pliegors.dev>"]
license = "Apache-2.0"
repository = "https://github.com/celiumsai/pliegors"
homepage = "https://pliegors.dev"
readme = "README.md"
keywords = ["rust", "web", "wasm", "static-site", "event-sourcing"]
categories = ["web-programming", "wasm", "development-tools"]
description = "A Rust-native front-end framework where the UI is a fold of a verifiable event log."
publish = ["crates-io"]

[workspace.dependencies]
# The log's hash chain — same primitive family as Hyphae's journal.
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
toml = "0.8"
semver = "1"
tar = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tiny_http = "0.12"
notify = "8.2.0"
js-sys = "=0.3.103"
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
wasm-bindgen-test = "=0.3.76"
web-sys = "=0.3.103"
wit-parser = { version = "=0.233.0", default-features = false }
wasmparser = { version = "=0.233.0", default-features = false, features = ["component-model", "std", "validate"] }
wasmtime = { version = "=36.0.8", default-features = false, features = ["component-model", "cranelift", "runtime", "std"] }
# Wasmtime permits newer psm releases whose build graph requires Rust 1.88.
# Pin the last graph validated under the PliegoRS 1.86 MSRV.
psm = "=0.1.28"

# Internal crates resolve locally in the workspace and to the exact release on crates.io.
pliego-dom = { version = "=0.0.2", path = "crates/pliego-dom" }
pliego-log = { version = "=0.0.2", path = "crates/pliego-log" }
pliego-reactive = { version = "=0.0.2", path = "crates/pliego-reactive" }
pliego-artifact = { version = "=0.0.2", path = "crates/pliego-artifact" }
pliego-sdk = { version = "=0.1.0-preview.1", path = "crates/pliego-sdk" }
pliego-starters = { version = "=0.0.2", path = "crates/pliego-starters" }

[profile.release]
# WASM size discipline from day one (docs/00 §5).
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
