# SPDX-License-Identifier: Apache-2.0

[package]
name = "pliegors-browser-apply-benchmark"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
js-sys = "=0.3.103"
pliego-dom = { path = "../../crates/pliego-dom" }
pliego-reactive = { path = "../../crates/pliego-reactive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.126"
web-sys = { version = "=0.3.103", features = ["Document", "Element", "HtmlElement", "Node", "NodeList", "Performance", "Window"] }
