# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lifecycle-scoped ESM adapter islands and deterministic bundling for PliegoRS."
publish.workspace = true

[dependencies]
pliego-dom = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
