# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Portable artifact namespaces and verifiable build receipts for PliegoRS."
publish.workspace = true

[dependencies]
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
unicode-casefold = "0.2"
unicode-normalization = "0.1"
