# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified PliegoRS build, dev, and inspect workflow."
publish.workspace = true

[[bin]]
name = "pliego"
path = "src/main.rs"

[dependencies]
pliego-artifact = { workspace = true }
pliego-starters = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiny_http = { workspace = true }
notify = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
tar = { workspace = true }
