# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-cloudflare"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Cloudflare Workers host adapter for the Pliego Build Output Contract."
publish.workspace = true

[dependencies]
pliego-pboc = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# 0.8.5 currently pulls wasm-streams 0.6.0 (Rust 1.88). Keep the newest
# workers-rs line that genuinely honors the PliegoRS 1.86 MSRV.
worker = { version = "=0.7.5" }

[dev-dependencies]
serde_json = { workspace = true }
