# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed, deterministic content collections for PliegoRS."
publish.workspace = true

[dependencies]
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
pulldown-cmark = { version = "=0.13.4", default-features = false, features = ["html"] }
serde.workspace = true
serde-saphyr = { version = "=0.0.29", default-features = false }
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[lib]
path = "src/lib.rs"
