# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-fold"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Transactional event-log projections, replay, and contract-bound snapshots for PliegoRS."
publish.workspace = true

[dependencies]
pliego-log = { workspace = true }
pliego-reactive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
