# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-hyphae"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned, validated PliegoRS client sync contract for Hyphae journals."
publish.workspace = true

[dependencies]
pliego-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
] }
