# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed, versioned, hash-chained event logs and schema admission for PliegoRS."
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
