# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed RSX and component macros for PliegoRS."
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
rstml = "0.12.1"
syn = { workspace = true }
