# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-reactive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Owned reactive graphs with dependency tracking, equality gating, and disposal for PliegoRS."
publish.workspace = true

[dependencies]

[dev-dependencies]
wasm-bindgen-test = "=0.3.76"
