# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-runtime"
version = "0.1.0-preview.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["http", "server", "rust", "web", "framework"]
categories = ["web-programming::http-server", "development-tools"]
description = "Bounded native HTTP lifecycle and dynamic runtime for PliegoRS."
publish.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pliego-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
