# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-runtime"
version = "0.3.0-beta.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["http", "server", "rust", "web", "framework"]
categories = ["web-programming::http-server", "development-tools"]
description = "Bounded native HTTP lifecycle and dynamic runtime for PliegoRS."
publish.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pliego-router = { workspace = true }
pliego-pboc = { workspace = true }
pliego-data = { workspace = true }
pliego-dom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
flate2 = { workspace = true }
multer = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hyper = { workspace = true, features = ["client"] }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
serde_json = { workspace = true }
