# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-ssg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic static-site generation for PliegoRS views."
publish.workspace = true

[dependencies]
cap-fs-ext = "=4.0.2"
cap-std = "=4.0.2"
fs2 = "0.4"
pliego-artifact = { workspace = true }
pliego-dom = { workspace = true }
serde_json = { workspace = true }
