# SPDX-License-Identifier: Apache-2.0
[package]
name = "pliego-starters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Official, embedded PliegoRS project starters."
publish.workspace = true

[lib]
path = "src/lib.rs"
