# SPDX-License-Identifier: Apache-2.0

[package]
name = "fullstack-pliego"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
http = { workspace = true }
pliego-router = { workspace = true }
pliego-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
serde_urlencoded = { workspace = true }
tower = { workspace = true }
